--- a/app/src/main/res/layout/fragment_connection.xml
+++ b/app/src/main/res/layout/fragment_connection.xml
@@ -6,84 +6,200 @@
     android:orientation="vertical"
     tools:context=".UI.ConnectionFragment">
 
-    
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="@dimen/_20sdp">
 
         <RelativeLayout
-            android:layout_marginTop="@dimen/_20sdp"
-            android:gravity="center_vertical"
-            android:background="@drawable/white_bg"
-            android:orientation="horizontal"
+            android:id="@+id/country_top"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_40sdp">
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:background="@drawable/white_bg"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <ImageView
-                android:layout_centerVertical="true"
                 android:id="@+id/flag_ic"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
+                android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:src="@drawable/ic_world_1" />
+
             <TextView
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/flag_ic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_toEndOf="@+id/flag_ic"
                 android:fontFamily="sans-serif"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="#2a387d"
                 android:lineSpacingExtra="3.3sp"
-                tools:text="USA - NEW YORK"/>
+                android:text="USA - NEW YORK"
+                android:textColor="#2a387d"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <ImageView
-                android:layout_centerVertical="true"
                 android:layout_width="@dimen/_10sdp"
                 android:layout_height="@dimen/_10sdp"
                 android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:src="@drawable/btn_down" />
         </RelativeLayout>
-        
-        <RelativeLayout
-            android:layout_marginBottom="@dimen/_20sdp"
-            android:layout_alignParentBottom="true"
-            android:gravity="center_vertical"
-            android:background="@drawable/btn_bg_gredient"
-            android:orientation="horizontal"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_40sdp">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/country_top"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:weightSum="2">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:src="@drawable/download_ic" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-medium"
+                        android:lineSpacingExtra="2sp"
+                        android:text="Download"
+                        android:textColor="#2a387d"
+                        android:textSize="10.7sp"
+                        android:textStyle="normal" />
+
+                    <TextView
+                        android:id="@+id/speed_down"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:fontFamily="sans-serif-medium"
+                        android:lineSpacingExtra="4sp"
+                        android:text="40.1"
+                        android:textColor="#2a387d"
+                        android:textSize="20sp"
+                        android:textStyle="normal" />
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_15sdp"
+                        android:layout_toEndOf="@+id/speed_down"
+                        android:fontFamily="sans-serif-medium"
+                        android:lineSpacingExtra="2.7sp"
+                        android:text="Mb/s"
+                        android:textColor="#2a387d"
+                        android:textSize="13.3sp"
+                        android:textStyle="normal" />
+                </RelativeLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:gravity="end"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:src="@drawable/upload_ic" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-medium"
+                        android:lineSpacingExtra="2sp"
+                        android:text="Download"
+                        android:textColor="#2a387d"
+                        android:textSize="10.7sp"
+                        android:textStyle="normal" />
+
+                    <TextView
+                        android:id="@+id/speed_up"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:fontFamily="sans-serif-medium"
+                        android:lineSpacingExtra="4sp"
+                        android:text="40.1"
+                        android:textColor="#2a387d"
+                        android:textSize="20sp"
+                        android:textStyle="normal" />
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_15sdp"
+                        android:layout_toEndOf="@+id/speed_up"
+                        android:fontFamily="sans-serif-medium"
+                        android:lineSpacingExtra="2.7sp"
+                        android:text="Mb/s"
+                        android:textColor="#2a387d"
+                        android:textSize="13.3sp"
+                        android:textStyle="normal" />
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/_20sdp"
+            android:background="@drawable/btn_bg_gredient"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <ImageView
-                android:layout_centerVertical="true"
                 android:id="@+id/world_id"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
+                android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:src="@drawable/ic_world_1" />
 
             <TextView
-                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_toEndOf="@+id/world_id"
                 android:fontFamily="sans-serif-medium"
                 android:lineSpacingExtra="3sp"
+                android:text="Select the Fastest Server"
                 android:textColor="#fdfcfe"
                 android:textSize="14.7sp"
-                android:textStyle="normal"
-                tools:text="Select the Fastest Server" />
+                android:textStyle="normal" />
 
             <ImageView
-                android:layout_centerVertical="true"
                 android:layout_width="@dimen/_10sdp"
                 android:layout_height="@dimen/_10sdp"
                 android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:src="@drawable/ic_next_ic" />
         </RelativeLayout>
