--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".UI.login.ForgetPasswordActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <RelativeLayout
             android:id="@+id/tool_main"
             android:layout_width="match_parent"
@@ -18,16 +20,17 @@
             android:orientation="vertical">
 
             <RelativeLayout
-                android:layout_marginStart="@dimen/_20sdp"
-
                 android:layout_width="match_parent"
+
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true">
+                android:layout_centerVertical="true"
+                android:layout_marginStart="@dimen/_20sdp">
+
                 <ImageView
                     android:id="@+id/back_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_arrow_back_24"/>
+                    android:src="@drawable/ic_baseline_arrow_back_24" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -49,90 +52,112 @@
         </RelativeLayout>
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_20sdp"
             android:layout_marginTop="@dimen/_30sdp"
-android:layout_marginHorizontal="@dimen/_20sdp"
+            android:fontFamily="sans-serif"
+            android:gravity="center_horizontal"
+            android:lineSpacingExtra="3sp"
+            android:text="Forget your Password?"
+            android:textColor="#2a387d"
+            android:textSize="14.7sp"
+            android:textStyle="normal" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_40sdp"
             android:fontFamily="sans-serif"
-            android:textStyle="normal"
-            android:textSize="14.7sp"
-            android:textColor="#2a387d"
-            android:lineSpacingExtra="3sp"
             android:gravity="center_horizontal"
-            tools:text="Forget your Password?"/>
-<TextView
-    android:layout_marginBottom="@dimen/_40sdp"
-android:layout_marginHorizontal="@dimen/_20sdp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:textStyle="normal"
-            android:textSize="14.7sp"
-            android:textColor="#2a387d"
             android:lineSpacingExtra="3sp"
-            android:gravity="center_horizontal"
-            tools:text="We‘ll Email you a link to reset your password."/>
+            android:text="We‘ll Email you a link to reset your password."
+            android:textColor="#2a387d"
+            android:textSize="14.7sp"
+            android:textStyle="normal" />
 
         <LinearLayout
-            android:layout_marginHorizontal="@dimen/_20sdp"
-            android:gravity="center_vertical"
-            android:background="@drawable/ed_bg"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_45sdp">
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:background="@drawable/ed_bg"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
             <ImageView
-                android:layout_marginHorizontal="@dimen/_20sdp"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
-                android:src="@drawable/email_ic"/>
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:src="@drawable/email_ic" />
+
             <EditText
-                android:textColorHint="@color/hint_color"
-                android:hint="Email"
-                android:textSize="@dimen/_14sdp"
-                android:textColor="@color/blue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"/>
+                android:background="@android:color/transparent"
+                android:hint="Email"
+                android:textColor="@color/blue"
+                android:textColorHint="@color/hint_color"
+                android:textSize="@dimen/_14sdp" />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_marginTop="@dimen/_20sdp"
-            android:layout_marginHorizontal="@dimen/_20sdp"
-            android:gravity="center_vertical"
-            android:background="@drawable/ed_bg"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_45sdp">
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:background="@drawable/ed_bg"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
             <ImageView
-                android:layout_marginHorizontal="@dimen/_10sdp"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
-                android:src="@drawable/alert_ic"/>
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:src="@drawable/alert_ic" />
+
             <EditText
-                android:textColorHint="#4f5eab"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 android:hint="You will be logged out from all your devices"
                 android:textColor="@color/blue"
-                android:textSize="@dimen/_11sdp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"/>
+                android:textColorHint="#4f5eab"
+                android:textSize="@dimen/_11sdp" />
         </LinearLayout>
 
 
-
-
+        <RelativeLayout
+            android:id="@+id/create_account"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:background="@drawable/btn_bg_gray">
 
             <TextView
-                android:id="@+id/back_logins"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginHorizontal="@dimen/_20sdp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:textStyle="normal"
-                android:textSize="14.7sp"
-                android:textColor="#4f5eab"
-                android:lineSpacingExtra="3sp"
-                tools:text="Back to Log in"/>
+                android:layout_centerInParent="true"
+                android:fontFamily="sans-serif-medium"
+                android:text="Send Reset link"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_14sdp" />
+        </RelativeLayout>
+
+
+        <TextView
+            android:id="@+id/back_logins"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:fontFamily="sans-serif"
+            android:lineSpacingExtra="3sp"
+            android:text="Back to Log in"
+            android:textColor="#4f5eab"
+            android:textSize="14.7sp"
+            android:textStyle="normal" />
 
 
     </LinearLayout>
