--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -111,6 +111,7 @@
             android:text="Forgot Password?"/>
 
         <RelativeLayout
+            android:id="@+id/create_account"
             android:layout_marginTop="@dimen/_30sdp"
             android:background="@drawable/btn_bg_gray"
             android:layout_marginHorizontal="@dimen/_20sdp"
