--- a/app/src/main/res/layout/activity_country_list.xml
+++ b/app/src/main/res/layout/activity_country_list.xml
@@ -47,13 +47,12 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue">
-    </com.google.android.material.tabs.TabLayout>
+        android:background="@color/blue"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="355dp"
-        android:layout_height="455dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@+id/tabLayout"
         tools:layout_editor_absoluteX="8dp" />
 </LinearLayout>
