--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -3,28 +3,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".UI.CountryList.LocationFragment">
 
-    <TextView
+    <RelativeLayout
+        android:id="@+id/layout_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_25sdp"
+        android:background="@color/white"
+        android:orientation="horizontal">
 
+
+        <ImageView
+            android:id="@+id/flag_ic"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:src="@drawable/flag_ic" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/flag_ic"
+            android:fontFamily="sans-serif-light"
+            android:lineSpacingExtra="2.7sp"
+            android:textColor="#4f5eab"
+            android:textSize="12.7sp"
+            android:textStyle="normal"
+            tools:text="Smart Location" />
+
+        <ImageView
+            android:id="@+id/ivSelect"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/circle_unselect" />
+
+
+    </RelativeLayout>
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_20sdp"
         android:fontFamily="sans-serif"
-        android:textStyle="normal"
-        android:textSize="13.3sp"
-        android:textColor="#4f5eab"
         android:lineSpacingExtra="2.7sp"
-        android:text="LOCATIONS"/>
+        android:text="LOCATIONS"
+        android:textColor="#4f5eab"
+        android:textSize="13.3sp"
+        android:textStyle="normal" />
 
     <ExpandableListView
         android:id="@+id/expandableListView"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:divider="@android:color/darker_gray"
         android:groupIndicator="@null"
         android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
-        android:divider="@android:color/darker_gray"
-        android:visibility="visible"/>
+        android:visibility="visible" />
 
 </LinearLayout>
