--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,7 +107,7 @@
             android:text="Forgot Password?"/>
 
         <RelativeLayout
-            android:id="@+id/signupActivity"
+            android:id="@+id/sign_in_btn"
             android:layout_marginTop="@dimen/_30sdp"
             android:background="@drawable/btn_bg_gray"
             android:layout_marginHorizontal="@dimen/_20sdp"
