--- a/app/src/main/res/layout/activity_split.xml
+++ b/app/src/main/res/layout/activity_split.xml
@@ -76,6 +76,6 @@ you want to exclude any app, tap on the toggle button. "/>
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/_10sdp"
-        tools:listitem="@layout/section_row" />
+        tools:listitem="@layout/app_list_item" />
 
 </LinearLayout>
