--- a/app/src/main/res/layout/app_list_item.xml
+++ b/app/src/main/res/layout/app_list_item.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif"
             android:lineSpacingExtra="2.7sp"
-            android:text="United Kingdom"
+            android:text=""
             android:textColor="#4f5eab"
             android:textSize="13.3sp"
             android:textStyle="normal" />
@@ -40,11 +40,10 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true">
 
-        <ImageView
+        <Switch
             android:id="@+id/signal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/signal_3"
             app:tint="@color/blue" />
     </RelativeLayout>
 </RelativeLayout>
