--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -27,6 +27,7 @@
                 android:layout_marginStart="@dimen/_20sdp">
 
                 <ImageView
+                    android:layout_centerVertical="true"
                     android:id="@+id/back_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -147,6 +148,7 @@
 
 
         <TextView
+            android:foreground="?android:attr/selectableItemBackground"
             android:id="@+id/back_logins"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
