--- a/app/src/main/res/drawable/btn_bg_gray.xml
+++ b/app/src/main/res/drawable/btn_bg_gray.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#cccccc" />
 
-    <corners android:radius="@dimen/_20sdp"/>
-</shape>
+
+<ripple
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/graytext">
+    <item>
+        <!--    <shape android:shape="rectangle">-->
+        <!--        <solid android:color="#FF000000"/>-->
+        <!--    </shape>-->
+        <shape
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="#cccccc" />
+            <corners android:radius="@dimen/_20sdp"/>
+        </shape>
+    </item>
+</ripple>
+
