--- a/app/src/main/res/drawable/btn_bg_gredient.xml
+++ b/app/src/main/res/drawable/btn_bg_gredient.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
 
-    xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:shape="rectangle">
-<corners android:radius="@dimen/_10sdp"/>
-    <gradient
+<ripple
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:color="@color/graytext">
+<item>
+    <shape
 
-        android:type="linear"
+        xmlns:android="http://schemas.android.com/apk/res/android"
 
-        android:startColor="#746ab9"
+        android:shape="rectangle">
+        <corners android:radius="@dimen/_10sdp"/>
+        <gradient
 
-        android:endColor="#f19494"
+            android:type="linear"
 
-        android:angle="180" />
+            android:startColor="#746ab9"
 
-</shape>
+            android:endColor="#f19494"
+
+            android:angle="180" />
+
+    </shape>
+</item>
+</ripple>
