--- a/app/src/main/res/drawable/white_bg.xml
+++ b/app/src/main/res/drawable/white_bg.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#ffffff" />
-    <stroke
-        android:width="1dp"
-        android:color="#4d2a387d" />
-    <corners android:radius="@dimen/_10sdp"/>
-</shape>
+
+<ripple
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:color="@color/graytext">
+<item>
+    <shape
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="rectangle">
+        <solid android:color="#ffffff" />
+        <stroke
+            android:width="1dp"
+            android:color="#4d2a387d" />
+        <corners android:radius="@dimen/_10sdp"/>
+    </shape>
+</item>
+</ripple>
