--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true">
             <ImageView
+                android:layout_centerVertical="true"
                 android:id="@+id/back_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
