--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".UI.CountryList.CountryListActivity">
+    android:orientation="vertical"
+    tools:context=".UI.FaQ.FaqActivity">
     <RelativeLayout
         android:id="@+id/tool_main"
         android:layout_width="match_parent"
@@ -20,13 +20,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true">
-
             <ImageView
+                android:layout_centerVertical="true"
                 android:id="@+id/back_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_baseline_arrow_back_24" />
+                android:src="@drawable/ic_baseline_arrow_back_24"/>
 
             <TextView
                 android:layout_marginStart="@dimen/_10sdp"
@@ -36,7 +35,7 @@
                 android:layout_centerVertical="true"
                 android:fontFamily="sans-serif-medium"
                 android:lineSpacingExtra="3.3sp"
-                android:text="VPN Locations"
+                android:text="FAQ"
                 android:textAllCaps="true"
                 android:textColor="#ffffff"
                 android:textSize="17.3sp"
@@ -46,16 +45,15 @@
 
 
     </RelativeLayout>
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/blue"/>
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager"
+    <ExpandableListView
+        android:id="@+id/expandableListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_marginHorizontal="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:divider="@android:color/transparent"
+        android:groupIndicator="@null"
+        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
+        android:visibility="visible" />
 </LinearLayout>
