--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -26,6 +26,7 @@
                 android:layout_marginStart="@dimen/_20sdp">
 
                 <ImageView
+                    android:layout_centerVertical="true"
                     android:id="@+id/back_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
