--- a/app/src/main/res/layout/activity_feedback_main.xml
+++ b/app/src/main/res/layout/activity_feedback_main.xml
@@ -22,6 +22,7 @@
             android:layout_marginStart="@dimen/_20sdp">
 
             <ImageView
+                android:layout_centerVertical="true"
                 android:id="@+id/back_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -63,6 +64,7 @@
             android:lineSpacingExtra="3.7sp"
             android:text="What would you like us to improve?"/>
         <RelativeLayout
+            android:id="@+id/connection_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -92,6 +94,7 @@
                 app:tint="@color/blue" />
         </RelativeLayout>
         <RelativeLayout
+            android:id="@+id/slow_speed_btn"
             android:layout_marginTop="@dimen/_25sdp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
