--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,86 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/container"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/drawerLayout"
+    android:layout_height="match_parent"
     android:background="@color/white"
-    android:layout_height="match_parent">
+    tools:context=".UI.HomeActivity">
 
-    <RelativeLayout
-        android:id="@+id/tool_main"
+    <include
+        android:id="@+id/app_bar_main"
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_45sdp"
-        android:background="@color/blue"
-        android:orientation="vertical">
+        android:layout_height="match_parent" />
 
-        <RelativeLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true">
-
-            <ImageView
-                android:id="@+id/menu_btn"
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="@dimen/_10sdp"
-
-
-                android:src="@drawable/menu_ic" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:layout_toEndOf="@+id/menu_btn"
-                android:fontFamily="sans-serif-medium"
-                android:lineSpacingExtra="3.3sp"
-                android:text="Turbo VPN"
-                android:textAllCaps="true"
-                android:textColor="#ffffff"
-                android:textSize="17.3sp"
-                android:textStyle="normal" />
-            <ImageView
-                android:layout_marginEnd="@dimen/_20sdp"
-                android:layout_toStartOf="@+id/remove_ad_btn"
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_centerVertical="true"
-                android:src="@drawable/filter_ic" />
-
-            <ImageView
-                android:id="@+id/remove_ad_btn"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_35sdp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:padding="@dimen/_5sdp"
-                android:src="@drawable/prem_ic" />
-        </RelativeLayout>
-
-
-    </RelativeLayout>
-
-    <FrameLayout
-        android:id="@+id/nav_host_frame"
-        android:layout_width="match_parent"
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/side_nav"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_above="@+id/nav_view"
-        android:layout_below="@+id/tool_main" />
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        app:itemIconTint="@color/botton_nav_text"
-        app:itemTextColor="@color/botton_nav_text"
-        app:menu="@menu/bottom_nav_menu" />
-
-
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
