--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,6 +102,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif"
             android:textSize="@dimen/_10sdp"
+            android:foreground="?android:attr/selectableItemBackground"
+
             android:id="@+id/forget_pass"
             android:textColor="#2a387d"
             android:text="Forgot Password?"/>
@@ -146,6 +148,7 @@
                 android:textStyle="normal"
                 android:textSize="12sp"
                 android:textColor="#992a387d"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:lineSpacingExtra="4sp"
                 android:text="Create account"/>
         </LinearLayout>
