--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -24,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true">
 <ImageView
+    android:layout_centerVertical="true"
     android:id="@+id/back_btn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -147,6 +148,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:textStyle="normal"
                 android:textSize="12sp"
                 android:textColor="#992a387d"
