--- a/app/src/main/res/layout/activity_split.xml
+++ b/app/src/main/res/layout/activity_split.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true">
             <ImageView
+                android:layout_centerVertical="true"
                 android:id="@+id/back_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -50,7 +51,7 @@ android:layout_marginVertical="@dimen/_10sdp"
         android:layout_height="wrap_content">
         <ImageView
             android:layout_gravity="center_vertical"
-            android:src="@drawable/faq_ic"
+            android:src="@drawable/ic_info_ic"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"/>
         <TextView
