--- a/app/src/main/res/layout/fragment_connection.xml
+++ b/app/src/main/res/layout/fragment_connection.xml
@@ -3,13 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".UI.ConnectionFragment">
 
-<ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="@dimen/_300sdp"
-    android:background="@drawable/main_bgg"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_300sdp"
+        android:background="@drawable/main_bgg" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -55,6 +58,7 @@
         </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/speed_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/country_top"
@@ -113,11 +117,12 @@
                         android:textStyle="normal" />
                 </RelativeLayout>
             </LinearLayout>
+
             <LinearLayout
-                android:gravity="end"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:gravity="end"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -167,6 +172,80 @@
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/select_fastest"
+            android:layout_below="@+id/speed_main"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/animationView"
+                    android:layout_width="@dimen/_200sdp"
+                    android:layout_height="@dimen/_200sdp"
+                    android:layout_marginBottom="@dimen/_20sdp"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"
+                    />
+
+                <TextView
+                    android:id="@+id/circle_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="sans-serif-medium"
+                    android:lineSpacingExtra="4sp"
+                    android:text=""
+                    android:textColor="#2a387d"
+                    android:textSize="20sp"
+                    android:textStyle="normal" />
+            </RelativeLayout>
+
+<LinearLayout
+    android:layout_gravity="center_horizontal"
+    android:orientation="horizontal"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:textStyle="normal"
+        android:textSize="17.3sp"
+        android:textColor="#aaaaaa"
+        android:lineSpacingExtra="4.7sp"
+        android:text="Status: "/>
+    <TextView
+android:id="@+id/status_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:textStyle="normal"
+        android:textSize="17.3sp"
+        android:textColor="@color/red"
+        android:lineSpacingExtra="4.7sp"
+        android:text="Disconnected"/>
+
+</LinearLayout>
+            <TextView
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:textStyle="normal"
+                android:textSize="15.3sp"
+                android:textColor="#c7c8cf"
+                android:lineSpacingExtra="3.3sp"
+                android:text="00:00:00"/>
+        </LinearLayout>
+
 
         <RelativeLayout
             android:id="@+id/select_fastest"
